[package]
name = "term-clock"
version = "0.1.2"
authors = ["hellojukay <hellojukay@163.com>"]
edition = "2018"
description = "a clock runing in terminal ui"
license-file = "LICENSE"
homepage = "https://github.com/hellojukay/term-clock"
documentation = "https://github.com/hellojukay/term-clock"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
terminal = "0.2.1"
figlet-rs= "0.1.3"
chrono = "0.4"
console= "0.14.1"
term_size = "0.3.2"
